--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,14 @@
       &:hover {
         background-color: #444;
       }
+
+      a {
+        color: #00bc8c;
+
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
 
