--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,3 +1,7 @@
+.loadingio-spinner-double-ring-p9rapysvl5 {
+  margin: 0 auto;
+}
+
 @keyframes ldio-9o98h6jgbfw {
   0% { transform: rotate(0) }
   100% { transform: rotate(360deg) }
