--- a/src/components/ErrorIndicator/ErrorIndicator.scss
+++ b/src/components/ErrorIndicator/ErrorIndicator.scss
@@ -5,6 +5,10 @@
   align-items: center;
   color: #c78f22;
 
+  .error-icon {
+    margin-bottom: 1rem;
+  }
+
   .boom {
     font-size: 1.7rem;
   }
