--- a/src/components/PlanetDetails/PlanetDetails.scss
+++ b/src/components/PlanetDetails/PlanetDetails.scss
@@ -1,10 +1,10 @@
-.person-details {
+.planet-details {
   display: flex;
   margin-top: 1rem;
   flex-direction: row;
   padding: 1rem;
 
-  .person-image {
+  .planet-image {
     width: 30%;
     height: 30%;
     border-radius: 10px;
