--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -1,10 +1,10 @@
-.planet-details {
+.item-details {
   display: flex;
   margin-top: 1rem;
   flex-direction: row;
   padding: 1rem;
 
-  .planet-image {
+  .item-image {
     width: 30%;
     height: 30%;
     border-radius: 10px;
